# travel-assistant-summer-module

./: .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
telegram-bot/: .env.example  .gitignore  CANONICAL_SOURCE.md  CHECK_BOT.bat  README.md  RUN_TESTS.bat  START_BOT.bat  STOP_BOT.bat  pyproject.toml  requirements.txt
telegram-bot/app/: bot.py  config.py  logging.py
telegram-bot/app/filters/: demo.py  menu.py
telegram-bot/app/handlers/: __init__.py  assistant.py  (+11 more)
telegram-bot/docs/: BOT-BACKEND-CONTRACT.md  DEMO-SCENARIO.md  GEMINI.md  GROQ.md  INTEGRATION-CHECKLIST.md  KNOWN-ISSUES.md  LOCAL-RUN.md  SECURITY.md  TELEGRAM-FUNCTIONS.md  TEST-REPORT.md  bot-api.openapi.yaml
telegram-bot/mock_backend/: data.py
telegram-bot/scripts/: check_bot.py  check_env.py  cutover_telegram_vps.sh  deploy_bot_sender_fix.sh  diagnose_telegram_logs.sh  generate_mock_pdfs.py  live_b2_contract_check.py  mark_synthetic_notification_failed.py  run_tests_stdlib.py  staging_consumer_check.py  update_env_file.py  validate_cutover_env.py  verify_archive.py  verify_telegram_service.sh
telegram-bot/tests/: conftest.py  helpers.py  test_aiogram_sender.py  test_assistant.py  test_config.py  test_deep_links.py  test_documents.py  test_fsm_storage.py  test_handler_dispatch.py  test_handlers.py  test_http_client.py  test_linking.py  test_notification_sender.py  test_notifications.py  test_openapi.py  test_secure_env_update.py  test_security.py  test_sos.py  test_startup.py  test_today_next.py  test_trips.py  test_windows_support.py
(+262 files in other folders)
